# TDNPGL

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  LICENSE  LICENSE.txt  README.md  SECURITY.md
Icons/: TDNPGL.ai
TDNPGL/: .gitignore
TDNPGL/licenses/: GTK-Sharp_COPYING.txt
TDNPGL/src/TDNPGL.Core/: Game.cs
TDNPGL/src/TDNPGL.GlobalDepencies/: TDNPGL.GlobalDepencies.csproj
docs/: requirements.txt
docs/source/: conf.py  create_first_game.rst  index.rst  level_structure.rst  setting_project.rst
docs/source/_templates/: layout.html
icons/: TDNPGL-old.ai  TDNPGL.ai
licenses/: ATK-Sharp_LICENSE.txt  GTK-Sharp_COPYING.txt
licensies/: ATK-Sharp_LICENSE.txt
src/: Directory.Build.props  TDNPGL.sln  packAll.ps1  pack_all.py  signScript.ps1  updateAll.ps1  update_all.py
src/Native/NativeTest/: NativeTest.csproj  Program.cs
src/Native/TDNPGL.DNNI/: DNNI.cs  NativeLoader.cs  TDNPGL.DNNI.csproj
src/Native/TDNPGL.Native/: CMakeLists.txt  TDNPGL.Native.vcxitems  TDNPGL.Native.vcxitems.filters  build.bat  build.py  build.sh  fetch_dependencies.py  linux-include.h  native_window.cpp  specGCCbuild.sh  tdnpgl.cpp  tdnpgl.h  wslBuild.bat
src/Native/TDNPGL.Native.Extensions/: AbstractNative.cs  Extensions.cs  NativeLinuxAMD64.cs  NativeLinuxARM.cs  NativeLinuxARM64.cs  NativeLinuxX86.cs  NativeManager.cs  NativeWin32.cs  TDNPGL.Native.Extensions.csproj  TDNPGL.Native.Extensions.xml  copyNativeDllToRes.ps1  native_dll_to_res.py
src/Native/TDNPGL.Native.Win32/: TDNPGL.Native.Win32.vcxproj  dllmain.cpp
src/Native/TDNPGL.Native.Win32.Extensions/: Delegates.cs  Extensions.cs  TDNPGL.Native.Win32.Extensions.csproj  copyNativeDllToRes.bat  copyNativeDllToRes.ps1  native_dll_to_res.py
src/TDNPGL.Cli/: ConsoleMethods.cs  HelpMessage.cs  Os.cs  Program.cs  ProjectTools.cs  TDNPGL.Cli.csproj
src/TDNPGL.Cli/Properties/: Resources.Designer.cs  Resources.resx  launchSettings.json
src/TDNPGL.Cli/Resources/: HelpMessages.json
src/TDNPGL.Core/: AssemblyAttributes.cs  Exceptions.cs  Extension.cs  Game.cs  GlobalSuppressions.cs  I18n.cs  LINQExtension.cs  Program.cs  ScriptsExecutor.cs  TDNPGL.Core.csproj
src/TDNPGL.Core/Debug/: CustomLogger.cs  Logging.cs
src/TDNPGL.Core/GUI/: AbstractComponent.cs  ButtonComponent.cs  GUICanvas.cs
src/TDNPGL.Core/Gameplay/: CSharpGameObjectListener.cs  GameObject.cs  GameObjectListener.cs  GameObjectScript.cs  GameObjectUpdater.cs  GameProvider.cs  Level.cs
src/TDNPGL.Core/Graphics/: GraphicsOutput.cs  (+4 more)
src/TDNPGL.GlobalDepencies/: TDNPGL.GlobalDepencies.csproj
src/TDNPGL.GlobalDependencies/: TDNPGL.GlobalDependencies.csproj
src/TDNPGL.NativeLoader/: AbstractNativeLibrary.cs  WinNativeLibrary.cs
src/TDNPGL.Networking/: AsyncActionResult.cs  Client.cs  Delegates.cs  NetworkLevel.cs  NetworkLevelHandler.cs  PacketType.cs  QueudAction.cs  SingleLevelServer.cs  TDNPGL.Networking.csproj
(+150 files in other folders)
